--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+d">
     <title>Esame di Stato 2022/2023</title>
 </head>
-<body style="background-color: red;">
-    
+<body style="background-color: #040405;">
+    <nav class="menu">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="educazione_civica.html">Educazione Civica</a></li>
+            <li><a href="materie.html">Materie</a></li1>
+        </u>
+    </nav>
+    <p style="font-size: 60px; font-weight: bold;">Esame di Stato 2022/2023</p>
+    <p style="font-size: 55px;">Ciotola Emanuele</p>
 </body>
 </html>
