--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+d">
-    <title>Esame di Stato 2022/2023</title>
+    <title>Home</title>
 </head>
-<body style="background-color: #040405;">
+<body>
     <nav class="menu">
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a class="paginaCorrente">Home</a></li>
             <li><a href="educazione_civica.html">Educazione Civica</a></li>
             <li><a href="materie.html">Materie</a></li1>
         </u>
