--- a/educazione_civica.html
+++ b/educazione_civica.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Educazione civica</title>
 </head>
-<body style="background-color: red;">
-    
+<body>
+    <nav class="menu">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a class="paginaCorrente">Educazione Civica</a></li>
+            <li><a href="materie.html">Materie</a></li1>
+        </u>
+    </nav>
 </body>
 </html>
