--- a/materie.html
+++ b/materie.html
@@ -10,9 +10,9 @@
 <body>
     <nav class="menu">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="educazione_civica.html">Educazione Civica</a></li>
-            <li><a class="paginaCorrente">Materie</a></li1>
+            <li><a onclick="window.location='index.html'">Home</a></li><!--
+            --><li><a onclick="document.location='educazione_civica.html'">Educazione Civica</a></li><!--
+            --><li><a class="paginaCorrente">Materie</a></li1>
         </u>
     </nav>
 </body>
