--- a/educazione_civica.html
+++ b/educazione_civica.html
@@ -10,9 +10,9 @@
 <body>
     <nav class="menu">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a class="paginaCorrente">Educazione Civica</a></li>
-            <li><a href="materie.html">Materie</a></li1>
+            <li><a onclick="document.location='index.html'">Home</a></li><!--
+            --><li><a class="paginaCorrente">Educazione Civica</a></li><!--
+            --><li><a onclick="document.location='materie.html'">Materie</a></li1>
         </u>
     </nav>
 </body>
