--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <nav class="menu">
         <ul>
-            <li><a class="paginaCorrente">Home</a></li>
-            <li><a href="educazione_civica.html">Educazione Civica</a></li>
-            <li><a href="materie.html">Materie</a></li1>
+            <li><a class="paginaCorrente">Home</a></li><!--
+            --><li><a onclick="document.location='educazione_civica.html'">Educazione Civica</a></li><!--
+            --><li><a onclick="document.location='materie.html'">Materie</a></li1>
         </u>
     </nav>
     <p style="font-size: 60px; font-weight: bold;">Esame di Stato 2022/2023</p>
