--- a/index.html
+++ b/index.html
@@ -8,14 +8,22 @@
     <title>Home</title>
 </head>
 <body>
-    <nav class="menu">
-        <ul>
-            <li><a class="paginaCorrente">Home</a></li><!--
-            --><li><a onclick="document.location='educazione_civica.html'">Educazione Civica</a></li><!--
-            --><li><a onclick="document.location='materie.html'">Materie</a></li1>
-        </u>
-    </nav>
-    <p style="font-size: 60px; font-weight: bold;">Esame di Stato 2022/2023</p>
-    <p style="font-size: 55px;">Ciotola Emanuele</p>
+    <div style="height: 100vh; display: flex; flex-flow: column;">
+        <nav class="menu">
+            <ul>
+                <li><a class="paginaCorrente">Home</a></li><!--
+                --><li><a onclick="document.location='educazione_civica.html'">Educazione Civica</a></li><!--
+                --><li><a onclick="document.location='materie.html'">Materie</a></li1>
+            </u>
+        </nav>
+        <!-- Fino a qui tutto corretto -->
+        <div style="flex-grow: 1; background-image: url(Assets/images/GraffitoViaDellaPace.svg); background-position: right; background-repeat: no-repeat; padding-left: 20px;">
+            <p style="font-size: 5vw; font-weight: bold; padding-top: 3vh;">Esame di Stato 2022/2023</p>
+            <p style="font-size: 4.5vw; padding-top: 3vh;">Ciotola Emanuele</p>
+        </div>
+    </div>
+    <div style="height: 100vh; background-color: #FEFEFE;">
+
+    </div>
 </body>
 </html>
