--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </u>
         </nav>
         <!-- Fino a qui tutto corretto -->
-        <div style="flex-grow: 1; background-image: url(Assets/images/GraffitoViaDellaPace.svg); background-position: right; background-repeat: no-repeat; padding-left: 20px;">
+        <div style="flex-grow: 1; background-image: url(Assets/images/GraffitoViaDellaPace.svg); background-position: bottom right; background-repeat: no-repeat; padding-left: 20px;">
             <p style="font-size: 5vw; font-weight: bold; padding-top: 3vh;">Esame di Stato 2022/2023</p>
             <p style="font-size: 4.5vw; padding-top: 3vh;">Ciotola Emanuele</p>
         </div>
