--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div style="flex-grow: 1; background-image: url(Assets/images/GraffitoViaDellaPace.svg); background-position: bottom right; background-repeat: no-repeat; padding-left: 20px;">
             <p style="font-size: calc(15px + 4vw); font-weight: bold; padding-top: 3vh;">Esame di Stato 2022/2023</p>
             <p style="font-size: calc(13px + 3.5vw); padding-top: 3vh;">Ciotola Emanuele</p>
-            <p style="font-size: calc(10px + 0.8vw); font-weight: lighter; position: absolute; bottom: calc(20px + 3vh); background-color: rgb(162, 162, 164, 0.95); border-radius: 20px; padding: 0.3em 0.8em 0.3em 0.8em;"><span style="font-style: italic;">"Il tempo è come un vento che soffia via tutto,<br>ma che ci lascia anche il dono dei ricordi"</span><br>– Emily Dickinson</p>
+            <p class="citazioneHomePage"><span style="font-style: italic;">"Il tempo è come un vento che soffia via tutto,<br>ma che ci lascia anche il dono dei ricordi"</span><br>– Emily Dickinson</p>
         </div>
     </div>
     <div style="height: 100vh; background-color: #FEFEFE;">
