--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
                 <li><a class="paginaCorrente">Home</a></li><!--
                 --><li><a onclick="document.location='educazione_civica.html'">Educazione Civica</a></li><!--
                 --><li><a onclick="document.location='materie.html'">Materie</a></li1>
-            </u>
+            </ul>
         </nav>
-        <!-- Fino a qui tutto corretto -->
         <div style="flex-grow: 1; background-image: url(Assets/images/GraffitoViaDellaPace.svg); background-position: bottom right; background-repeat: no-repeat; padding-left: 20px;">
             <p style="font-size: calc(15px + 4vw); font-weight: bold; padding-top: 3vh;">Esame di Stato 2022/2023</p>
             <p style="font-size: calc(13px + 3.5vw); padding-top: 3vh;">Ciotola Emanuele</p>
             <p class="citazioneHomePage"><span style="font-style: italic;">"Il tempo è come un vento che soffia via tutto,<br>ma che ci lascia anche il dono dei ricordi"</span><br>– Emily Dickinson</p>
         </div>
     </div>
-    <div style="height: 100vh; background-color: #FEFEFE;">
+    <div style="height: 100vh; background-color: #EDE8DD;">
 
     </div>
 </body>
