--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <p class="citazioneHomePage"><span style="font-style: italic;">"Il tempo è come un vento che soffia via tutto,<br>ma che ci lascia anche il dono dei ricordi"</span><br>– Emily Dickinson</p>
         </div>
     </div>
-    <div style="height: 100vh; background-color: #EDE8DD;">
-
+    <div style="background-color: #EDE8DD; line-height: 0;">
+        <img src="Assets/images/FotoRicordi.svg" width="100%">
     </div>
 </body>
 </html>
