--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <nav id="menu">
             <ul>
-                <li><a id="home" class="active" onclick="Funzione(id)">Home</a></li><!--
-                --><li><a id="educazione_civica" onclick="Funzione(id)">Educazione Civica</a></li><!--
-                --><li><a id="materie"  onclick="Funzione(id)">Materie</a>
+                <li><a id="home" class="active" onclick="goTo(id)">Home</a></li><!--
+                --><li><a id="educazione_civica" onclick="goTo(id)">Educazione Civica</a></li><!--
+                --><li><a id="materie"  onclick="goTo(id)">Materie</a>
                 </li>
             </ul>
         </nav>
