--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p class="citazioneHomePage"><span style="font-style: italic;">"Il tempo è come un vento che soffia via tutto,<br>ma che ci lascia anche il dono dei ricordi"</span><br>– Emily Dickinson</p>
             </div>
         </div>
-        <div style="background-color: #EDE8DD; line-height: 0;">
+        <div style="background-color: #EDE8DD; line-height: 0; user-select: none; -moz-user-select: none; -khtml-user-select: none; -webkit-user-select: none; -o-user-select: none;">
             <img src="Assets/images/FotoRicordi.svg" width="100%">
         </div>
     </div>
