--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <section class="schermataPrincipale">
         <div id="home_Page" style="height: 100vh; display: flex; flex-flow: column;">
             <div style="flex-grow: 1; background-image: url(Assets/images/GraffitoViaDellaPace.svg); background-position: bottom right; background-repeat: no-repeat; padding-left: 20px; margin-top: calc(45px + 1vw);">
-                <p class="testoHome osservato fadeIn" style="font-size: calc(15px + 4vw); font-weight: bold;">Esame di Stato 2022/2023</p>
-                <p class="testoHome osservato fadeIn" style="font-size: calc(13px + 3.5vw);">Ciotola Emanuele</p>
-                <p class="citazioneHomePage osservato fadeIn"><span style="font-style: italic;">"Il tempo è come un vento che soffia via tutto,<br>ma che ci lascia anche il dono dei ricordi"</span><br>– Emily Dickinson</p>
+                <p class="testoHome osservato fadeInH" style="font-size: calc(15px + 4vw); font-weight: bold;">Esame di Stato 2022/2023</p>
+                <p class="testoHome osservato fadeInH" style="font-size: calc(13px + 3.5vw);">Ciotola Emanuele</p>
+                <p class="citazioneHomePage osservato fadeInW"><span style="font-style: italic;">"Il tempo è come un vento che soffia via tutto,<br>ma che ci lascia anche il dono dei ricordi"</span><br>– Emily Dickinson</p>
             </div>
         </div>
         <div style="background-color: #EDE8DD; line-height: 0; user-select: none; -moz-user-select: none; -khtml-user-select: none; -webkit-user-select: none; -o-user-select: none;">
@@ -32,14 +32,25 @@
     </section>
 
     <section id="educazione_civica_Page" style="height: 1000px; background-color: #040405; padding: calc(45px + 1vw) 20px 0 20px;">
-        <div class="osservato fadeIn">
-            <p style="font-size: calc(13px + 3.5vw); font-weight: bold; text-align: center;">Etica</p>
-            <p style="font-size: calc(11px + 1.5vw); font-weight: bold; text-align: center;">delle scienze e delle nuove tecnologie</p>
+        <p class="osservato fadeInH" style="font-size: calc(13px + 3.5vw); font-weight: bold; text-align: center;">Etica</p>
+        <p class="osservato fadeInH" style="font-size: calc(11px + 1.5vw); font-weight: bold; text-align: center; margin-bottom: calc(45px + 1vw);">delle scienze e delle nuove tecnologie</p>
+        <div class="materiaEC osservato fadeInW" style="display: flex;">
+            <div style="flex: 1;">
+                <p style="font-size: calc(11px + 1.5vw);">Italiano</p>
+                <p style="font-size: calc(13px + 3.5vw); font-weight: bold;">I ragazzi di<br>via Panisperna</p>
+            </div>
+            <div style="flex: 1.5;">
+                <p>"Ragazzi di via Panisperna" è il soprannome di un gruppo di giovani scienziati italiani, guidato da Enrico Fermi, che negli anni trenta del Novecento operò presso il Regio istituto di fisica dell'Università di Roma, allora ubicato in via Panisperna n. 90. La grandezza di questo gruppo sta nell'aver dato l'avvio per lo sviluppo scientifico del reattore e bomba nucleare, scoprendo la proprietà dei neutroni lenti.<br>Facevano parte di questo eccezionale gruppo: Eduardo Amaldi, Franco Rasetti, Emilio Segrè, Bruno Pontecorvo, Oscar D'Agostino, e il giovane Ettore Majorana.<br>Con l'inizio del periodo fascista e, in particolare, l'introduzione delle leggi razziali in Italia, il gruppo dei ragazzi di via Panisperna si sciolse sia per mancanza di risorse all'interno dell'università sia per aver ideologie differenti rispetto al regime fascista. C'è chi è andato negli Stati Uniti per il progetto Manhattan, chi in Inghilterra. L'unico scienziato di cui non si hanno le tracce è Ettore Majorana.</p>
+            </div>
         </div>
-        <div style="display: flex; flex-direction: rows; flex-wrap: wrap; gap: 20px;">
-            <div id="italiano" class="materiaEC" onclick="mostra_nascondi(id)">
-                <p class="titoloMateriaEC">Italiano</p>
-                <p class="testoMateriaEC">Sottotitolo o descrizione.</p>
+
+        <div class="materiaEC osservato fadeInW" style="display: flex;">
+            <div style="flex: 1.5;">
+                <p>"Ragazzi di via Panisperna" è il soprannome di un gruppo di giovani scienziati italiani, guidato da Enrico Fermi, che negli anni trenta del Novecento operò presso il Regio istituto di fisica dell'Università di Roma, allora ubicato in via Panisperna n. 90. La grandezza di questo gruppo sta nell'aver dato l'avvio per lo sviluppo scientifico del reattore e bomba nucleare, scoprendo la proprietà dei neutroni lenti.<br>Facevano parte di questo eccezionale gruppo: Eduardo Amaldi, Franco Rasetti, Emilio Segrè, Bruno Pontecorvo, Oscar D'Agostino, e il giovane Ettore Majorana.<br>Con l'inizio del periodo fascista e, in particolare, l'introduzione delle leggi razziali in Italia, il gruppo dei ragazzi di via Panisperna si sciolse sia per mancanza di risorse all'interno dell'università sia per aver ideologie differenti rispetto al regime fascista. C'è chi è andato negli Stati Uniti per il progetto Manhattan, chi in Inghilterra. L'unico scienziato di cui non si hanno le tracce è Ettore Majorana.</p>
+            </div>
+            <div style="flex: 1;">
+                <p style="font-size: calc(11px + 1.5vw); text-align: right;">Inglese</p>
+                <p style="font-size: calc(13px + 3.5vw); font-weight: bold; text-align: right;">I ragazzi di<br>via Panisperna</p>
             </div>
         </div>
     </section>
