--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
     <section id="educazione_civica_Page" style="background-color: #040405; padding: calc(45px + 1vw) 20px 10px 20px;">
         <p class="osservato fadeInH" style="font-size: calc(13px + 3.5vw); font-weight: bold; text-align: center;">Etica</p>
-        <p class="osservato fadeInH" style="font-size: calc(11px + 1.5vw); font-weight: bold; text-align: center;">delle scienze e delle nuove tecnologie</p>
-        <div style="background-image: url(Assets/images/TriangoliViaDellaPace.svg); padding-top: calc(45px + 1vw);">
+        <p class="osservato fadeInH" style="font-size: calc(11px + 1.5vw); font-weight: bold; text-align: center; margin-bottom: calc(45px + 1vw);">delle scienze e delle nuove tecnologie</p>
+        <div style="background-image: url(Assets/images/TriangoliViaDellaPace.svg);">
             <div class="materiaEC osservato fadeInW" style="display: flex;">
                 <div style="padding-right: 5vw;">
                     <p style="font-size: calc(10px + 0.8vw);">Storia</p>
