--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         </div>
     </section>
 
-    <section id="educazione_civica_Page" style="background-color: #040405;">
+    <section id="educazione_civica_Page" style="background-color: #040405; padding-top: calc(45px + 1vw);">
         <p class="osservato fadeInH" style="font-size: calc(13px + 3.5vw); font-weight: bold; text-align: center;">Etica</p>
         <p class="osservato fadeInH" style="font-size: calc(11px + 1.5vw); font-weight: bold; text-align: center; margin-bottom: calc(45px + 1vw);">delle scienze e delle nuove tecnologie</p>
-        <div style="background-image: url(Assets/images/TriangoliViaDellaPace.svg); padding: calc(45px + 1vw) 8px 10px 20px;">
+        <div style="background-image: url(Assets/images/TriangoliViaDellaPace.svg); padding: 0 8px 10px 20px;">
             
 
 
