--- a/index.html
+++ b/index.html
@@ -26,25 +26,22 @@
                 <p class="citazioneHomePage osservato fadeInW"><span style="font-style: italic;">"Il tempo è come un vento che soffia via tutto,<br>ma che ci lascia anche il dono dei ricordi"</span><br>– Emily Dickinson</p>
             </div>
         </div>
-        <div style="background-color: #EDE8DD; line-height: 0; user-select: none; -moz-user-select: none; -khtml-user-select: none; -webkit-user-select: none; -o-user-select: none;">
-            <img src="Assets/images/FotoRicordi.svg" width="100%">
+        <div style="background-color: #EDE8DD; user-select: none; -moz-user-select: none; -khtml-user-select: none; -webkit-user-select: none; -o-user-select: none;">
+            <img src="Assets/images/FotoRicordi.svg" width="100%" oncontextmenu="return false;" draggable="false" style="padding: 0 2vw 0 2vw;">
         </div>
     </section>
 
     <section id="educazione_civica_Page" style="background-color: #040405; padding-top: calc(45px + 1vw);">
         <p class="osservato fadeInH" style="font-size: calc(13px + 3.5vw); font-weight: bold; text-align: center;">Etica</p>
         <p class="osservato fadeInH" style="font-size: calc(11px + 1.5vw); font-weight: bold; text-align: center; margin-bottom: calc(45px + 1vw);">delle scienze e delle nuove tecnologie</p>
-        <div style="background-image: url(Assets/images/TriangoliViaDellaPace.svg); padding: 0 8px 10px 20px;">
-            
-
-
+        <div style="background-image: url(Assets/images/TriangoliViaDellaPace.svg); padding: 0 20px 10px 20px;">
             <div class="materiaEC osservato fadeInW">
                 <div class="titolo_materiaEC sinistra">
                     <p style="font-size: calc(10px + 0.8vw);">Storia</p>
                     <p style="font-size: calc(12px + 2.5vw); font-weight: bold;">L'invenzione della<br>bomba atomica</p>
                 </div>
                 <div style="flex: 1.5;">
-                    <p>L'invenzione della bomba atomica durante la Seconda Guerra Mondiale ha sollevato questioni etiche significative. Da un lato, alcuni sostengono che l'uso della bomba abbia permesso di porre fine alla guerra più rapidamente e di salvare vite umane, poiché un'invasione del Giappone avrebbe causato un numero elevato di morti. D'altro canto, l'utilizzo della bomba ha causato la morte di centinaia di migliaia di civili innocenti, e ha aperto la strada per l'utilizzo di armi nucleari in futuri conflitti.<br>Inoltre, la decisione di utilizzare la bomba atomica è stata criticata perché il Giappone era già in condizioni precarie e stava cercando di arrendersi prima che la bomba fosse utilizzata. Ci sono state anche preoccupazioni per i suoi effetti a lungo termine sulla salute e sull'ambiente.</p>
+                    <p>L'invenzione della bomba atomica durante la Seconda Guerra Mondiale ha sollevato questioni etiche significative. Da un lato, alcuni sostengono che l'uso della bomba abbia permesso di porre fine alla guerra più rapidamente e di salvare vite umane, poiché un'invasione del Giappone avrebbe causato un numero elevato di morti. D'altro canto, l'utilizzo della bomba ha causato la morte di centinaia di migliaia di civili innocenti, e ha aperto la strada per l'utilizzo di armi nucleari in futuri conflitti. Inoltre, la decisione di utilizzare la bomba atomica è stata criticata perché il Giappone era già in condizioni precarie e stava cercando di arrendersi prima che la bomba fosse utilizzata. Ci sono state anche preoccupazioni per i suoi effetti a lungo termine sulla salute e sull'ambiente.</p>
                 </div>
             </div>
             <div class="materiaEC osservato fadeInW" style="flex-direction: row-reverse;">
@@ -53,17 +50,16 @@
                     <p style="font-size: calc(12px + 2.5vw); font-weight: bold;">L'etica</p>
                 </div>
                 <div style="flex: 1.5;">
-                    <p>Il termine «etica» fu introdotto da Aristotele per designare le sue trattazioni di filosofia della pratica; indica quella parte della filosofia che si occupa del costume, ossia del comportamento umano. Semplificando il concetto, è possibile affermare che parlando di etica ci si riferisca ad ogni dottrina o riflessione speculativa intorno al comportamento pratico dell’uomo, al fine di individuare il vero bene e i mezzi atti a conseguirlo, ma anche quali siano i doveri morali dell’uomo verso sé stesso e verso gli altri e quali i criteri per giudicare sulla moralità delle azioni umane.<br>Più in generale, l’etica è oggi altresì intesa come complesso di norme morali e di costume che un individuo, o un gruppo di individui, segue nelle proprie azioni e che sono in grado di identificare un preciso comportamento nella vita di relazione con riferimento a specifiche situazioni (es. etica cristiana; etica del lavoro, ecc.). L’etica è quindi sia un insieme di norme e di valori che regolano il comportamento dell’uomo in relazione agli altri, sia un criterio che permette all’uomo stesso di giudicare i comportamenti, propri e altrui, rispetto alle categorie di "bene" e "male".</p>
+                    <p>Il termine «etica» fu introdotto da Aristotele per designare le sue trattazioni di filosofia della pratica; indica quella parte della filosofia che si occupa del costume, ossia del comportamento umano. Semplificando il concetto, è possibile affermare che parlando di etica ci si riferisca ad ogni dottrina o riflessione speculativa intorno al comportamento pratico dell’uomo, al fine di individuare il vero bene e i mezzi atti a conseguirlo, ma anche quali siano i doveri morali dell’uomo verso sé stesso e verso gli altri e quali i criteri per giudicare sulla moralità delle azioni umane. Più in generale, l’etica è oggi altresì intesa come complesso di norme morali e di costume che un individuo, o un gruppo di individui, segue nelle proprie azioni e che sono in grado di identificare un preciso comportamento nella vita di relazione con riferimento a specifiche situazioni (es. etica cristiana; etica del lavoro, ecc.). L’etica è quindi sia un insieme di norme e di valori che regolano il comportamento dell’uomo in relazione agli altri, sia un criterio che permette all’uomo stesso di giudicare i comportamenti, propri e altrui, rispetto alle categorie di "bene" e "male".</p>
                 </div>
             </div>
-
             <div class="materiaEC osservato fadeInW">
                 <div class="titolo_materiaEC sinistra">
                     <p style="font-size: calc(10px + 0.8vw);">Italiano</p>
                     <p style="font-size: calc(12px + 2.5vw); font-weight: bold;">I ragazzi di<br>via Panisperna</p>  
                 </div>
                 <div style="flex: 1.5;">
-                    <p>"Ragazzi di via Panisperna" è il soprannome di un gruppo di giovani scienziati italiani, guidato da Enrico Fermi, che negli anni trenta del Novecento operò presso il Regio istituto di fisica dell'Università di Roma, allora ubicato in via Panisperna n. 90. La grandezza di questo gruppo sta nell'aver dato l'avvio per lo sviluppo scientifico del reattore e bomba nucleare, scoprendo la proprietà dei neutroni lenti. Facevano parte di questo eccezionale gruppo: Eduardo Amaldi, Franco Rasetti, Emilio Segrè, Bruno Pontecorvo, Oscar D'Agostino, e il giovane Ettore Majorana. Con l'inizio del periodo fascista e, in particolare, l'introduzione delle leggi razziali in Italia, il gruppo dei ragazzi di via Panisperna si sciolse sia per mancanza di risorse all'interno dell'università sia per aver ideologie differenti rispetto al regime fascista. C'è chi è andato negli Stati Uniti per il progetto Manhattan, chi in Inghilterra. L'unico scienziato di cui non si hanno le tracce è Ettore Majorana.<br>La sera del 25 marzo 1938, Ettore Majorana partì da Napoli alla volta di Palermo. Nei giorni seguenti Majorana inviò una lettere e un telegramma nei quali afferma in maniera abbastanza evidente di volersi togliere la vita, dopodiché non si ebbero più tracce. La scomparsa di Ettore Majorana venne tratta Leonardo Sciascia nel saggio «La scomparsa di Majorana». L'autore raccoglie le notizie frammentarie sul fatto, le dichiarazioni di persone vicine a Majorana rielaborandole in modo personale, affascinante e suggestiva, a tratti quasi romanzata, delineando in modo efficace la peculiare personalità del personaggio, giocando con il mito dell'intelligenza suprema e delle sue presunte capacità profetiche nonché con le sue contraddizioni.</p>
+                    <p>"Ragazzi di via Panisperna" è il soprannome di un gruppo di giovani scienziati italiani, guidato da Enrico Fermi, che negli anni trenta del Novecento operò presso il Regio istituto di fisica dell'Università di Roma, allora ubicato in via Panisperna n. 90. La grandezza di questo gruppo sta nell'aver dato l'avvio per lo sviluppo scientifico del reattore e bomba nucleare, scoprendo la proprietà dei neutroni lenti. Facevano parte di questo eccezionale gruppo: Eduardo Amaldi, Franco Rasetti, Emilio Segrè, Bruno Pontecorvo, Oscar D'Agostino, e il giovane Ettore Majorana. Con l'inizio del periodo fascista e, in particolare, l'introduzione delle leggi razziali in Italia, il gruppo dei ragazzi di via Panisperna si sciolse sia per mancanza di risorse all'interno dell'università sia per aver ideologie differenti rispetto al regime fascista. C'è chi è andato negli Stati Uniti per il progetto Manhattan, chi in Inghilterra. L'unico scienziato di cui non si hanno le tracce è Ettore Majorana. La sera del 25 marzo 1938, Ettore Majorana partì da Napoli alla volta di Palermo. Nei giorni seguenti Majorana inviò una lettere e un telegramma nei quali afferma in maniera abbastanza evidente di volersi togliere la vita, dopodiché non si ebbero più tracce. La scomparsa di Ettore Majorana venne tratta Leonardo Sciascia nel saggio «La scomparsa di Majorana». L'autore raccoglie le notizie frammentarie sul fatto, le dichiarazioni di persone vicine a Majorana rielaborandole in modo personale, affascinante e suggestiva, a tratti quasi romanzata, delineando in modo efficace la peculiare personalità del personaggio, giocando con il mito dell'intelligenza suprema e delle sue presunte capacità profetiche nonché con le sue contraddizioni.</p>
                 </div>
             </div>
             <div class="materiaEC osservato fadeInW" style="flex-direction: row-reverse;">
@@ -75,7 +71,6 @@
                     <p>Logo</p>
                 </div>
             </div>
-
             <div class="materiaEC osservato fadeInW">
                 <div class="titolo_materiaEC sinistra">
                     <p style="font-size: calc(10px + 0.8vw);">Scienze naturali</p>
@@ -94,14 +89,13 @@
                     <p>Grafici</p>
                 </div>
             </div>
-
             <div class="materiaEC osservato fadeInW">
                 <div class="titolo_materiaEC sinistra">
                     <p style="font-size: calc(10px + 0.8vw);">Scienze motorie</p>
                     <p style="font-size: calc(12px + 2.5vw); font-weight: bold;">Il doping<br>tecnologico</p>
                 </div>
                 <div style="flex: 1.5;">
-                    <p>Il doping tecnologico si riferisce all'uso di tecnologie avanzate per migliorare le prestazioni sportive degli atleti. Questo può includere l'utilizzo di dispositivi elettronici, come gli occhiali a raggi infrarossi per migliorare la visione notturna, o di sostanze chimiche per migliorare la resistenza fisica. Il doping tecnologico solleva questioni etiche poiché viola l'idea di gareggiare su un campo di gioco equo e crea un dislivello nel terreno di gioco per gli atleti che non possono permettersi o non hanno accesso alle tecnologie avanzate. Inoltre, ci sono preoccupazioni per la salute degli atleti che utilizzano tecnologie o sostanze potenzialmente pericolose.<br>Il doping tecnologico è stato bandito da molte organizzazioni sportive, tra cui la Federazione Internazionale di Atletica Leggera e il Comitato Olimpico Internazionale, che stabiliscono regole rigorose per prevenire l'uso di tecnologie e sostanze vietate. Tuttavia, con l'evoluzione costante della tecnologia, diventa sempre più difficile tenere il passo con le nuove forme di doping tecnologico e prevenirle. In generale, l'etica del doping tecnologico richiede un equilibrio tra il desiderio di promuovere la competizione sportiva e il rispetto della salute e della sicurezza degli atleti, nonché la necessità di garantire una competizione equa.</p>
+                    <p>Il doping tecnologico si riferisce all'uso di tecnologie avanzate per migliorare le prestazioni sportive degli atleti. Questo può includere l'utilizzo di dispositivi elettronici, come gli occhiali a raggi infrarossi per migliorare la visione notturna, o di sostanze chimiche per migliorare la resistenza fisica. Il doping tecnologico solleva questioni etiche poiché viola l'idea di gareggiare su un campo di gioco equo e crea un dislivello nel terreno di gioco per gli atleti che non possono permettersi o non hanno accesso alle tecnologie avanzate. Inoltre, ci sono preoccupazioni per la salute degli atleti che utilizzano tecnologie o sostanze potenzialmente pericolose. Il doping tecnologico è stato bandito da molte organizzazioni sportive, tra cui la Federazione Internazionale di Atletica Leggera e il Comitato Olimpico Internazionale, che stabiliscono regole rigorose per prevenire l'uso di tecnologie e sostanze vietate. Tuttavia, con l'evoluzione costante della tecnologia, diventa sempre più difficile tenere il passo con le nuove forme di doping tecnologico e prevenirle. In generale, l'etica del doping tecnologico richiede un equilibrio tra il desiderio di promuovere la competizione sportiva e il rispetto della salute e della sicurezza degli atleti, nonché la necessità di garantire una competizione equa.</p>
                 </div>
             </div>
             <div class="materiaEC osservato fadeInW" style="flex-direction: row-reverse;">
@@ -113,7 +107,6 @@
                     <p>Gli algoritmi decisionali sono utilizzati per prendere decisioni automatizzate in molti ambiti, con l'aumento dell'utilizzo delle intelligenze artificiali, diventano sempre più sofisticati. Tuttavia, gli algoritmi decisionali possono scaturite problemi etici se non vengono progettati e utilizzati in modo responsabile, perpetuando le discriminazioni e le ingiustizie presenti nei dati usati per il loro "addestramento". Per affrontare questi problemi è importante adottare pratiche etiche di progettazione, utilizzo e valutazione degli algoritmi. Gli algoritmi decisionali sono progettati per operare in base ai dati disponibili e alle regole impostate, mentre il giudizio umano può tenere conto di elementi quali l'empatia, la flessibilità e la creatività. A oggi, quindi, è impossibile affermare che il livello dei suddetti algoritmi eguagli quello della coscienza umana, nonostante in alcuni casi possano essere molto più efficienti: il giudizio umano è fondamentale per prendere decisioni in molte situazioni, in quanto permette di considerare aspetti complessi e sfumati che gli algoritmi decisionali potrebbero non essere in grado di cogliere.</p>
                 </div>
             </div>
-
             <div class="materiaEC osservato fadeInW">
                 <div class="titolo_materiaEC sinistra">
                     <p style="font-size: calc(10px + 0.8vw);">Religione</p>
@@ -132,10 +125,6 @@
                     <p>Almost two centuries after its publication, Mary Shelley's Frankenstein has assumed the role of a popular myth for our technical-scientific culture. Read as a romantic critique of Enlightenment rationalism, Frankenstein is often cited today as an alarm before the risks posed by a research of scientific knowledge and dominion over nature. A more nuanced reading of Shelley's novel, however, doesn’t suggest an adamant opposition to science. The story of Frankenstein is now familiar: it is the story of the scientist Victor Frankenstein, who, driven by a desire to discover the mysteries of life, strives to create a human being. Instead, you produce a monster, which brings its creator suffering and ruin. What happens is precisely to demonstrate that both from a scientific and also an ethical point of view it is neither possible nor right to violate the rules of nature so excessively.</p>
                 </div>
             </div>
-            
-
-
-
         </div>
     </section>
 
