--- a/index.html
+++ b/index.html
@@ -129,28 +129,41 @@
         </div>
     </section>
 
-    <section id="pcto_Page" style="background-color: #EDE8DD; padding: calc(45px + 1vw) 20px calc(45px + 1vw) 20px; color: #040405;">
+    <section id="pcto_Page" style="background-color: #EDE8DD; padding-top: calc(45px + 1vw); color: #040405;">
         <p class="osservato fadeInH" style="font-size: calc(13px + 3.5vw); font-weight: bold; text-align: center;">PCTO</p>
-        <p class="osservato fadeInH" style="font-size: calc(11px + 1.5vw); font-weight: bold; text-align: center; margin-bottom: calc(45px + 1vw);">percorsi per le competenze trasversali e l'orientamento</p>
-        
-        <div id="anniPCTO" style="display: grid; text-align: center; justify-content: center;">
-            <div class="annoPCTO osservato fadeInH">
-                <p style="font-size: calc(12px + 1.8vw); font-weight: bold;">Terzo anno</p>
-                <p>Economia e Marketing: concetti chiave per<br>il successo aziendale.</p>
+        <p class="osservato fadeInH" style="font-size: calc(11px + 1.5vw); font-weight: bold; text-align: center;">percorsi per le competenze trasversali e l'orientamento</p>
+        <div style="background-image: url(Assets/images/SpiraleAurea.svg); padding-bottom: calc(10px + 10vh);">
+            <div id="anniPCTO" style="padding: calc(45px + 1vw) 20px calc(45px + 1vw) 20px; display: grid; text-align: center; justify-content: center;">
+                <div class="annoPCTO osservato fadeInH">
+                    <p style="font-size: calc(12px + 1.8vw); font-weight: bold;">Terzo anno</p>
+                    <p>Economia e Marketing: concetti chiave per<br>il successo aziendale.</p>
+                </div>
+                <div class="annoPCTO osservato fadeInH">
+                    <p style="font-size: calc(12px + 1.8vw); font-weight: bold;">Quarto anno</p>
+                    <p>Introduzione al mondo universitario:<br>orientamento e FAQ.</p>
+                </div>
+                <div class="annoPCTO osservato fadeInH">
+                    <p style="font-size: calc(12px + 1.8vw); font-weight: bold;">Quinto anno</p>
+                    <p>Etica delle nuove tecnologie: le intelligenze<br>artificiali e i deep fake.</p>
+                </div>
             </div>
-            <div class="annoPCTO osservato fadeInH">
-                <p style="font-size: calc(12px + 1.8vw); font-weight: bold;">Quarto anno</p>
-                <p>Introduzione al mondo universitario:<br>orientamento e FAQ.</p>
+            <div id="relazioneFinalePCTO">
+                <p class="osservato fadeInH" style="font-size: calc(12px + 1.8vw); font-weight: bold; text-align: center;">Relazione finale</p>
+                <p class="osservato fadeInH" style="margin-bottom: 2vh;">Il PCTO rappresenta un'evoluzione dei precedenti percorsi di alternanza scuola-lavoro e ha lo scopo di promuovere l'acquisizione di competenze trasversali, ovvero quelle abilità e conoscenze che vanno al di là delle materie tradizionali, ma che sono fondamentali per affrontare le sfide del mondo del lavoro e per la formazione di cittadini attivi e consapevoli.</p>
+                <p class="osservato fadeInH" style="margin-bottom: 2vh;">Per quanto a livello teorico il PCTO sia un'attività pressoché pratica, si è rivelata, nel mio caso, quasi completamente di matrice teorica. Numerosi sono stati gli argomenti trattati e alcuni hanno suscitato in maniera particolare il mio interesse: tra questi troviamo sicuramente il funzionamento di Google Ads, gli elementi trattati durante l'evento di divulgazione scientifica dell'Università Federico II, e il meccanismo di IA noto come "deep fake".</p>
+                <div class="argomentoPCTO osservato fadeInW" style="margin-bottom: 2vh;">
+                    <p style="font-size: calc(11px + 1.5vw); font-weight: bold;">Google Ads</p>
+                    <p>Google Ads è una piattaforma pubblicitaria online offerta da Google che consente alle aziende di promuovere i propri prodotti e servizi attraverso annunci pubblicitari su diversi canali digitali.<br>Per utilizzare Google Ads in ottica lavorativa, è necessario definire gli obiettivi pubblicitari, per esempio l'aumento delle vendite. Una volta creata la campagna, è importante monitorarne regolarmente le performance analizzando le metriche come il numero di clic, al fine di ottimizzare le strategie pubblicitarie. La piattaforma offre anche funzionalità avanzate come la segmentazione geografica, per raggiungere solo specifici luoghi geografici.<br>Google Ads è dunque uno strumento potente per la pubblicità online che consente alle aziende di raggiungere un vasto pubblico di potenziali clienti.</p>
+                </div>
+                <div class="argomentoPCTO osservato fadeInW" style="margin-bottom: 2vh;">
+                    <p style="font-size: calc(11px + 1.5vw); font-weight: bold;">Evento Università Federico II</p>
+                    <p>Oltre che per il solo fine divulgativo, l'iniziativa intrapresa dall'Università Federico II è stata utile a introdurci il mondo universitario, permettendoci di conoscere docenti e studenti. È anche da sottolineare il fatto che, in quanto unica iniziativa in presenza nell'arco dei primi due anni, è stata quella più coinvolgente.<br>La presentazione ha interessato principalmente il campo fisico e quello medico: notevole importanza è stata data alla spiegazione del funzionamento di alcune terapie contro il cancro, come la radioterapia. Al termine dell'attività ho avuto il piacere di parlare personalmente con uno dei professori, il quale mi ha amichevolmente dato qualche dritta sul percorso di studi che intraprenderò.</p>
+                </div>
+                <div class="argomentoPCTO osservato fadeInW">
+                    <p style="font-size: calc(11px + 1.5vw); font-weight: bold;">Deep fake</p>
+                    <p>Il deepfake è una tecnica per la sintesi dell'immagine umana basata sull'intelligenza artificiale, usata per combinare e sovrapporre immagini e video esistenti con altri. Questa tecnica è stata usata per creare fake news, bufale e truffe, per compiere atti di cyberbullismo o altri crimini informatici di varia natura. I deepfake stanno diventando sempre più diffusi e realistici grazie al continuo sviluppo delle IA. È quindi importante essere consapevoli di questo fenomeno e di come riconoscerlo per prevenire la disinformazione e gli attacchi hacker.</p>
+                </div>
             </div>
-            <div class="annoPCTO osservato fadeInH">
-                <p style="font-size: calc(12px + 1.8vw); font-weight: bold;">Quinto anno</p>
-                <p>Etica delle nuove tecnologie: le intelligenze<br>artificiali e i deep fake.</p>
-            </div>
-        </div>
-
-        <div id="relazioneFinalePCTO" style="margin-top: calc(45px + 1vw);">
-            <p class="osservato fadeInH" style="font-size: calc(12px + 1.8vw); font-weight: bold; text-align: center;">Relazione finale</p>
-            <p class="osservato fadeInH" style="font-weight: 500;">Questa è una relazione finale parole a caso la devo ancora finire bla bla test prova bla bla bla prova del test della prova nel test nella prova test prova prova test.</p>
         </div>
     </section>
 
