--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a id="home" class="active" onclick="goTo(id)">Home</a></li><!--
             --><li><a id="educazione_civica" onclick="goTo(id)">Educazione civica</a></li><!--
-            --><li><a id="pcto"  onclick="goTo(id)">PCTO</a><!--
+            --><li><a id="pcto"  onclick="goTo(id)">Pcto</a><!--
             --><li><a id="materie"  onclick="goTo(id)">Materie</a>
             </li>
         </ul>
