Modifica cambio colore scrollbar e fine uda

--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
                     <p style="font-size: calc(12px + 2.5vw); font-weight: bold;">I ragazzi di<br>via Panisperna</p>  
                 </div>
                 <div style="flex: 1.5;">
-                    <p>"Ragazzi di via Panisperna" è il soprannome di un gruppo di giovani scienziati italiani, guidato da Enrico Fermi, che negli anni trenta del Novecento operò presso il Regio istituto di fisica dell'Università di Roma, allora ubicato in via Panisperna n. 90. La grandezza di questo gruppo sta nell'aver dato l'avvio per lo sviluppo scientifico del reattore e bomba nucleare, scoprendo la proprietà dei neutroni lenti. Facevano parte di questo eccezionale gruppo: Eduardo Amaldi, Franco Rasetti, Emilio Segrè, Bruno Pontecorvo, Oscar D'Agostino, e il giovane Ettore Majorana. Con l'inizio del periodo fascista e, in particolare, l'introduzione delle leggi razziali in Italia, il gruppo dei ragazzi di via Panisperna si sciolse sia per mancanza di risorse all'interno dell'università sia per aver ideologie differenti rispetto al regime fascista. C'è chi è andato negli Stati Uniti per il progetto Manhattan, chi in Inghilterra. L'unico scienziato di cui non si hanno le tracce è Ettore Majorana. La sera del 25 marzo 1938, Ettore Majorana partì da Napoli alla volta di Palermo. Nei giorni seguenti Majorana inviò una lettere e un telegramma nei quali afferma in maniera abbastanza evidente di volersi togliere la vita, dopodiché non si ebbero più tracce. La scomparsa di Ettore Majorana venne tratta Leonardo Sciascia nel saggio «La scomparsa di Majorana». L'autore raccoglie le notizie frammentarie sul fatto, le dichiarazioni di persone vicine a Majorana rielaborandole in modo personale, affascinante e suggestiva, a tratti quasi romanzata, delineando in modo efficace la peculiare personalità del personaggio, giocando con il mito dell'intelligenza suprema e delle sue presunte capacità profetiche nonché con le sue contraddizioni.</p>
+                    <p>"Ragazzi di via Panispena" è il soprannome di un gruppo di giovani scienziati italiani, guidato da Enrico Fermi, che negli anni trenta del Novecento operò presso il Regio istituto di fisica dell'Università di Roma, allora ubicato in via Panisperna n. 90. La grandezza di questo gruppo sta nell'aver dato l'avvio per lo sviluppo scientifico dei reattori e delle bombe nucleari. Con l'inizio del periodo fascista e, in particolare, l'introduzione delle leggi razziali in Italia, il gruppo dei ragazzi di via Panisperna si sciolse sia per mancanza di risorse all'interno dell'università, sia per la diversa ideologia dei membri del gruppo rispetto al regime fascista. Alcuni andarono negli Stati Uniti per il progetto Manhattan, altri in Inghilterra. L'unico scienziato di cui si persero le tracce fu Ettore Majorana. La sua scomparsa venne tratta da Leonardo Sciascia nel saggio «La scomparsa di Majorana». L'autore raccolse qui le notizie frammentarie sul fatto e le dichiarazioni di persone vicine a Majorana, rielaborandole in maniera personale.</p>
                 </div>
             </div>
             <div class="materiaEC osservato fadeInW" style="flex-direction: row-reverse;">
                 <div class="titolo_materiaEC destra">
                     <p style="font-size: calc(10px + 0.8vw);">Arte</p>
-                    <p style="font-size: calc(12px + 2.5vw); font-weight: bold;">Logo NO bullismo<br>e cyberbullimo</p>
+                    <p style="font-size: calc(12px + 2.5vw); font-weight: bold;">Il Bauhaus</p>
                 </div>
                 <div style="flex: 1.5;">
-                    <p>Logo</p>
+                    <p>Il Bauhaus è una nuova e democratica scuola pubblica fondata da Walter Gropius negli anni Trenta, in cui gli allievi e i docenti studiano, vivono e lavorano insieme, condividendo esperienze e apprendendo. Questo approccio si basa su una concezione culturale pragmatica, incentrata sul confronto delle idee e sulla volontà di creare un'arte che sia soprattutto utile e in grado di comprendere e soddisfare i bisogni delle persone comuni. In breve tempo, il Bauhaus si trasforma in un movimento emblematico di una precisa etica, in cui l'arte diventa anche un mezzo per rispettare le persone. Si pone come un ostacolo al nazismo che agita la Germania di quegli anni, sia dal punto di vista sociale a causa del regime dittatoriale, sia dal punto di vista tecnologico.</p>
                 </div>
             </div>
             <div class="materiaEC osservato fadeInW">
@@ -84,10 +84,10 @@
             <div class="materiaEC osservato fadeInW" style="flex-direction: row-reverse;">
                 <div class="titolo_materiaEC destra">
                     <p style="font-size: calc(10px + 0.8vw);">Matematica e fisica</p>
-                    <p style="font-size: calc(12px + 2.5vw); font-weight: bold;">L'eutanasia in<br>Olanda e Belgio</p>
+                    <p style="font-size: calc(12px + 2.5vw); font-weight: bold;">L'eutanasia<br>in Olanda</p>
                 </div>
                 <div style="flex: 1.5;">
-                    <p>Grafici</p>
+                    <img src="Assets/images/EutanasiaOlandaEC.svg" width="80%">
                 </div>
             </div>
             <div class="materiaEC osservato fadeInW">
