--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
 
     <section class="schermataPrincipale">
         <div id="home_Page" style="height: 100vh; display: flex; flex-flow: column;">
-            <div style="flex-grow: 1; background-image: url(Assets/images/GraffitoViaDellaPace.svg); background-position: bottom right; background-repeat: no-repeat; padding-left: 20px; margin-top: calc(45px + 1vw);">
+            <div id="homeSection">
                 <p class="testoHome osservato fadeInH" style="font-size: calc(15px + 4vw); font-weight: bold;">Esame di Stato 2022/2023</p>
                 <p class="testoHome osservato fadeInH" style="font-size: calc(13px + 3.5vw);">Ciotola Emanuele</p>
                 <p class="citazioneHomePage osservato fadeInW"><span style="font-style: italic;">"Il tempo è come un vento che soffia via tutto,<br>ma che ci lascia anche il dono dei ricordi"</span><br>– Emily Dickinson</p>
             </div>
         </div>
         <div id="fotoRicordi">
-            <img src="Assets/images/FotoRicordi.svg" width="100%" oncontextmenu="return false;" draggable="false" style="display:block; padding: 0 2vw 0 2vw;">
+            <img src="Assets/images/FotoRicordi.svg" width="100%" oncontextmenu="return false;" draggable="false" style="display: block; padding: 0 2vw 0 2vw;">
         </div>
     </section>
 
-    <section id="educazione_civica_Page" style="background-color: #040405; padding-top: calc(45px + 1vw);">
-        <p class="osservato fadeInH" style="font-size: calc(13px + 3.5vw); font-weight: bold; text-align: center;">Etica</p>
-        <p class="osservato fadeInH" style="font-size: calc(11px + 1.5vw); font-weight: bold; text-align: center; margin-bottom: calc(45px + 1vw);">delle scienze e delle nuove tecnologie</p>
+    <section id="educazione_civica_Page" style="padding-top: calc(45px + 1vw);">
+        <p class="osservato fadeInH titoloSezione">Etica</p>
+        <p class="osservato fadeInH sottotitoloSezione">delle scienze e delle nuove tecnologie</p>
         <div style="background-image: url(Assets/images/TriangoliViaDellaPace.svg); padding: 0 20px 10px 20px;">
             <div class="materiaEC osservato fadeInW">
                 <div class="titolo_materiaEC sinistra">
@@ -130,10 +130,10 @@
     </section>
 
     <section id="pcto_Page" style="background-color: #EDE8DD; padding-top: calc(45px + 1vw); color: #040405;">
-        <p class="osservato fadeInH" style="font-size: calc(13px + 3.5vw); font-weight: bold; text-align: center;">PCTO</p>
-        <p class="osservato fadeInH" style="font-size: calc(11px + 1.5vw); font-weight: bold; text-align: center;">percorsi per le competenze trasversali e l'orientamento</p>
-        <div style="background-image: url(Assets/images/SpiraleAurea.svg); padding-bottom: calc(10px + 10vh);">
-            <div id="anniPCTO" style="padding: calc(45px + 1vw) 20px calc(45px + 1vw) 20px; display: grid; text-align: center; justify-content: center;">
+        <p class="osservato fadeInH titoloSezione">PCTO</p>
+        <p class="osservato fadeInH sottotitoloSezione">percorsi per le competenze trasversali e l'orientamento</p>
+        <div style="background-image: url(Assets/images/SpiraleAurea.svg); padding-bottom: 10px;">
+            <div id="anniPCTO">
                 <div class="annoPCTO osservato fadeInH">
                     <p style="font-size: calc(12px + 1.8vw); font-weight: bold;">Terzo anno</p>
                     <p>Economia e Marketing: concetti chiave per<br>il successo aziendale.</p>
@@ -167,7 +167,7 @@
         </div>
     </section>
 
-    <section id="materie_Page" style="height: 1000px; background-color: #040405; padding-top: calc(45px + 1vw);">
+    <section id="materie_Page" style="height: 1000px; padding-top: calc(45px + 1vw);">
         <p class="osservato fadeInH" style="font-size: calc(13px + 3.5vw); font-weight: bold; text-align: center; color: #EDE8DD;">L'innovazione</p>
         <p class="osservato fadeInH" style="font-size: calc(11px + 1.5vw); font-weight: bold; text-align: center; margin-bottom: calc(45px + 1vw); color: #EDE8DD;">il tema ricorrente della storia umana</p> <!-- concetto al posto di tema? -->
 
