Cambio sfondi UDA e PCTO

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section id="educazione_civica_Page" style="padding-top: calc(45px + 1vw);">
         <p class="osservato fadeInH titoloSezione">Etica</p>
         <p class="osservato fadeInH sottotitoloSezione">delle scienze e delle nuove tecnologie</p>
-        <div style="background-image: url(Assets/images/TriangoliViaDellaPace.svg); padding: 0 20px 10px 20px;">
+        <div style="background-image: url(Assets/images/TriangoliViaDellaPace.svg); padding: calc(45px + 1vw) 0 10px 0;">
             <div class="materiaEC osservato fadeInW">
                 <div class="titolo_materiaEC sinistra">
                     <p style="font-size: calc(10px + 0.8vw);">Storia</p>
@@ -168,8 +168,8 @@
     </section>
 
     <section id="materie_Page" style="height: 1000px; padding-top: calc(45px + 1vw);">
-        <p class="osservato fadeInH" style="font-size: calc(13px + 3.5vw); font-weight: bold; text-align: center; color: #EDE8DD;">L'innovazione</p>
-        <p class="osservato fadeInH" style="font-size: calc(11px + 1.5vw); font-weight: bold; text-align: center; margin-bottom: calc(45px + 1vw); color: #EDE8DD;">il tema ricorrente della storia umana</p> <!-- concetto al posto di tema? -->
+        <p class="osservato fadeInH titoloSezione">Navigare nell'ignoto</p>
+        <p class="osservato fadeInH sottotitoloSezione">l'essere umano e la sua capacità di adattamento</p> <!-- concetto al posto di tema? -->
 
         
     </section>
