--- a/index.html
+++ b/index.html
@@ -175,5 +175,15 @@
     </section>
         
     <script src="javascript/main.js"></script>
+    <script>
+        window.addEventListener('load', function() {
+          var elem = document.documentElement;
+          var requestFullScreen = elem.requestFullscreen || elem.mozRequestFullScreen || elem.webkitRequestFullscreen || elem.msRequestFullscreen;
+      
+          if (requestFullScreen) {
+            requestFullScreen.call(elem);
+          }
+        });
+      </script>
 </body>
 </html>
